fix: light theme bug
This change fixes light theme bug where some of the text remains
light and disappears/becomes invisible when the theme is switched
to light mode.

--- a/styles/master.sass
+++ b/styles/master.sass
@@ -759,6 +759,8 @@
 
 	b
 		color: white
+		.theme-light &
+			color: $px-dark
 
 .skill-lt
 	position: relative
